Fix toolbar overflow

--- a/frontend/src/assets/_layout.scss
+++ b/frontend/src/assets/_layout.scss
@@ -24,6 +24,7 @@
   flex-direction: column;
   max-height: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .col-sidebar {
